@startuml

interface Carta{
  + {abstract} jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + {abstract} getNombre(): String

}

Carta <|.. Clima
Carta <|.. ClimaSoleado
Carta <|.. MoraleBoost
Carta <|.. TierraArrasada


class Clima{
  - nombre: String
  - posAfectadas: List<Posicion>

  + Clima(nombre: String, List<Posicion> posicionesAfectadas)
  + jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + getNombre(): String
}

class ClimaSoleado{
  - nombre: String
  - posAfectadas: List<Posicion>

  + Clima(nombre: String, List<Posicion> posicionesAfectadas)
  + jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + getNombre(): String
}

class MoraleBoost{
  - nombre: String
  - {static} multiplicador : int

  + MoraleBoost(nombre: String)
  + jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + getNombre(): String
}

class TierraArrasada{
  - nombre: String

  + TierraArrasada(nombre: String)
  + jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + getNombre(): String
}

@enduml